* Fine-tuned icon to match Android's design.
* Updated emojis for Android-O.
* Long-pressing SHIFT will lock. Or unlock..
* Localization update: .

More here: https://github.com/AnySoftKeyboard/AnySoftKeyboard/milestone/82