@@ -1,6 +1,7 @@
 * Fine-tuned icon to match Android's design.
 * Updated emojis for Android-O.
 * Long-pressing SHIFT will lock. Or unlock..
+* Incognito Mode! Long-press ENTER to start. Will not learn new words in this mode.
 * Localization update: .
 
 More here: https://github.com/AnySoftKeyboard/AnySoftKeyboard/milestone/82
